# connections

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pycop.py  pyproject.toml
.github/workflows/: pages.yml  python-app.yml
comparisons/: benchmark_prover.py  leancop10c.sh  leancop10c_count.sh  leancop10c_swi.pl  leancop10c_swi_count.pl  print_diff.py  tptp_fof_benchmarks.ipynb
comparisons/classical/: cnf_diff.py  count.csv  diff.py  fof_diff.py  leancop.py  leancop_trace.py
comparisons/classical/leancop10f/: leancop10.sh  leancop10_main.pl  leancop10f.pl  leancop10f_swi.pl
comparisons/classical/leancop10f_trace/: def_mm_f.pl  leancop10.sh  leancop10f_swi.pl
comparisons/classical/leancop_trans_v22f/: README_leancop_trans  leancop_main_trans.pl  leancop_trans.sh  leancop_trans_orig.sh
comparisons/classical/leancop_trans_v22fb/: leancop_trans.sh  set871
comparisons/intuitionistic/: benchmark_prover.py  benchmarks.ipynb  diff.py  fof_diff.py  ileancop.py  ileancop_trace.py  leancop.py  problems.txt  results  tptp_fof_benchmarks.ipynb
comparisons/modal/: diff.py  diff_D_constant.csv  diff_D_cumulative.csv  diff_D_varying.csv  diff_S4_constant.csv  diff_S4_cumulative.csv  diff_S4_varying.csv  diff_S5_constant.csv  diff_S5_cumulative.csv  diff_S5_varying.csv  diff_T_constant.csv  diff_T_cumulative.csv  diff_T_varying.csv  mleancop.py  mleancop_trace.py  problems_D_constant.txt  problems_D_varying.txt  problems_S4_constant.txt  problems_S4_cumulative.txt  problems_S4_varying.txt  problems_S5_constant.txt  problems_S5_varying.txt  problems_T_constant.txt  problems_T_cumulative.txt  results
connections/: env.py
connections/calculi/: classical.py  intuitionistic.py  modal.py  modal_d.py  modal_s4.py  modal_s5.py  modal_t.py
connections/logic/: prefix_substitution.py  substitution.py  syntax.py  tableau.py
connections/search/: actions.py  env.py  state.py
connections/utils/: cnf_parsing.py  factories.py  icnf_parsing.py  primitives.py  unification.py  unification_d.py  unification_intu.py  unification_old.py  unification_t.py
cops/calculi/: classical.py  intuitionistic.py  modal.py  modal_d.py  modal_s4.py  modal_s5.py  modal_t.py
cops/utils/: cnf_parsing.py  icnf_parsing.py  primitives.py  unification.py  unification_d.py  unification_intu.py  unification_t.py
docs/: mkdocs.yml
docs/src/: corpus-and-parity-tools.md  development.md  index.md  prover-api.md  state-dynamics.md  tptp-parser.md  unification.md
src/connections/: trace_logging.py
src/connections/constraints/: delta.py  (+10 more)
tests/: README.md  conftest.py  test_classical.py  test_cnf_parsing.py  test_cnf_primitives-Fredrik’s MacBook Pro.py  test_icnf_parsing.py  test_intuitionistic.py  test_prefix_substitution.py  test_primitives.py  test_unification.py  test_unification_intu.py  test_unification_t.py
tests/cnf_problems/: CSR091+1.p.cnf  CSR115+20.p  GEO081+1.p  GEO185+1.p  LAT381+3.p  MGT007+1.p  NUM531+1.p  NUM618+3.p  SET027+3.p  SET718+4.p  SET875+1.p  SET877+1.p  SYN001+1.p  SYN081+1.cnf  SYN726+1.cnf  SYN916+1.cnf
tests/fixtures/: helper.py
tests/icnf_problems/: SWV184+1.p  SWV230+1.p  SYN081+1.cnf  SYN347+1.cnf  SYN550+1.cnf  SYN917+1.cnf  SYN918+1.cnf  SYN920+1.cnf
tests/integration/: test_corpus_tptp_parsing.py  test_entrypoints_cli.py  test_tools_corpus.py  test_tools_parity.py  test_tools_profiling.py
tests/utils/: test_cnf_primitives.py
tools/: README.md  __init__.py
tools/corpus/: __init__.py  download.py  records.py  run.py  selection.py
tools/parity/: __init__.py  benchmark_status.py  diagnose_search.py  prefix_cases.py  prefix_oracle.py  prefix_syntax.py  run_all.py  run_free_variable_admissibility_parity.py  run_manifest.py  run_matrix_parity.py  run_prefix_equation_parity.py  run_prefix_parity.py  run_status_check.py  run_trace_parity.py  summarize_trace_rows.py
tools/profiling/: __init__.py  run.py
translation/: translate_directory.py
translation/classical/: leancop_main_trans.pl  set871.cnf  translate.sh
translation/intuitionistic/: def_mm_intu_f.pl  set871.cnf  translate.sh
translation/modal/: README_leancop_mtrans  mleancop_defmm_f.pl  translate.sh
(+130 files in other folders)
